<?xml version="1.0"?>
<package format="2">
    <name>dsol</name>
    <version>0.0.0</version>
    <description>The dsol package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>

    <export>
    </export>
</package>
